# barcode_generator

./: .flake8  .gitignore  README.md  example.config.yaml  example.input.csv  main.py  pyproject.toml  setup.sh  start.sh
app/: config.py  draw_images.py  main.py  setup.sh
